Adjust search text criterion with endswith number strategy

--- a/templates/conventions/home/_tab.html
+++ b/templates/conventions/home/_tab.html
@@ -1,4 +1,4 @@
-{% if tab_active and count > 0 %}
+{% if tab_active %}
     {# If tab is currently open, no link needed #}
     <li>
         <div class="fr-tabs__tab" aria-selected="true">{{ count }} convention{% if count > 1 %}s{% endif %} {{ label }}</div>
