Add surface_corrigee to Logement & import it from Ecoloweb

--- a/templates/conventions/recapitulatif/logements.html
+++ b/templates/conventions/recapitulatif/logements.html
@@ -54,6 +54,7 @@
                                                     </td>
                                                     <td id="lgt_sh">
                                                         {{ logement.surface_habitable|floatformat:2 }}
+                                                        {{ logement.surface_corrigee|floatformat:2 }}
                                                     </td>
                                                     <td id="lgt_sa">
                                                         {{ logement.surface_annexes|floatformat:2 }}
