init step for résidence

--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -85,7 +85,8 @@
                         {% include "conventions/recapitulatif/pieces_jointes.html" %}
                     {% endif %}
                     {% include "conventions/recapitulatif/stationnements.html" with target_url='conventions:stationnements' %}
-                    {% include "conventions/recapitulatif/attribution.html" with target_url='conventions:attribution' %}
+                    {% include "conventions/recapitulatif/foyer_attribution.html" with target_url='conventions:foyer_attribution' %}
+                    {% include "conventions/recapitulatif/residence_attribution.html" with target_url='conventions:residence_attribution' %}
                     {% include "conventions/recapitulatif/variantes.html" with target_url='conventions:variantes' %}
                     {% include "conventions/recapitulatif/comments.html" with target_url='conventions:comments' %}
                 {% endif %}
