--- a/templates/conventions/recapitulatif/residence_attribution.html
+++ b/templates/conventions/recapitulatif/residence_attribution.html
@@ -14,6 +14,9 @@
                         </div>
                         {% include "conventions/actions/goto.html" %}
                     </div>
+                    {% include "common/display_checkbox.html" with value=convention.attribution_residence_sociale_ordinaire label="Résidence sociale ordinaire" object_field="convention__attribution_residence_sociale_ordinaire__"|add:convention_uuid %}
+                    {% include "common/display_checkbox.html" with value=convention.attribution_pension_de_famille label="Pension de famille" object_field="convention__attribution_pension_de_famille__"|add:convention_uuid %}
+                    {% include "common/display_checkbox.html" with value=convention.attribution_residence_accueil label="Résidence accueil" object_field="convention__attribution_residence_accueil__"|add:convention_uuid %}
                     <h4 class='fr-mt-3w'>Autres modalitées</h4>
                     {% include "common/display_textfield_if_exists.html" with label="Les modalités de gestion des reservations sont obligatoires" value=convention.attribution_modalites_reservations object_field="convention__attribution_modalites_reservations__"|add:convention_uuid %}
                     {% include "common/display_textfield_if_exists.html" with label="Modalités de choix des personnes accueillies" value=convention.attribution_modalites_choix_personnes object_field="convention__attribution_modalites_choix_personnes__"|add:convention_uuid %}
