--- a/templates/conventions/residence_attribution.html
+++ b/templates/conventions/residence_attribution.html
@@ -24,19 +24,15 @@
                     value="{{ form.uuid.value|default_if_none:'' }}">
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12">
-                        <h3>Conditions d'attribution et d'occupation permanente du logement-foyer</h3>
+                        <h3>Conditions d'attribution et d'occupation permanente de la résidence</h3>
 
-                        <div class="fr-grid-row fr-grid-row--gutters">
-                            <div class="fr-col-12 fr-mb-2w">
-                                {% include "common/form/input_number.html" with display_inline=True form_input=form.attribution_reservation_prefectoral object_field="convention__attribution_reservation_prefectoral__"|add:form.uuid.value %}
-                            </div>
-                        </div>
+                        {% include 'conventions/attribution/reservation_prefectoral.html' %}
 
-                        <h4>Autres modalitées</h4>
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_modalites_reservations helptext_visible=True object_field="convention__attribution_modalites_reservations__"|add:form.uuid.value %}
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_modalites_choix_personnes helptext_visible=True object_field="convention__attribution_modalites_choix_personnes__"|add:form.uuid.value %}
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_prestations_integrees helptext_visible=True is_list=True object_field="convention__attribution_prestations_integrees__"|add:form.uuid.value %}
-                        {% include "common/form/input_textarea.html" with form_input=form.attribution_prestations_facultatives helptext_visible=True is_list=True object_field="convention__attribution_prestations_facultatives__"|add:form.uuid.value %}
+                        {% include "common/form/input_checkbox.html" with form_input=form.attribution_residence_sociale_ordinaire object_field="convention__attribution_residence_sociale_ordinaire__"|add:form.uuid.value %}
+                        {% include "common/form/input_checkbox.html" with form_input=form.attribution_pension_de_famille object_field="convention__attribution_pension_de_famille__"|add:form.uuid.value %}
+                        {% include "common/form/input_checkbox.html" with form_input=form.attribution_residence_accueil object_field="convention__attribution_residence_accueil__"|add:form.uuid.value %}
+
+                        {% include 'conventions/attribution/autres_modalitees.html' %}
 
                     </div>
                 </div>
