--- a/templates/conventions/variantes.html
+++ b/templates/conventions/variantes.html
@@ -34,10 +34,10 @@
 
                         <div class="fr-grid-row fr-grid-row--gutters">
                             <div class="fr-col-12 fr-mb-2w">
-                                {% include "common/form/input_checkbox.html" with form_input=form.foyer_variante_1 strike_unchecked=True object_field="convention__foyer_variante_1__"|add:form.uuid.value %}
-                                {% include "common/form/input_checkbox.html" with form_input=form.foyer_variante_2 strike_unchecked=True object_field="convention__foyer_variante_2__"|add:form.uuid.value %}
-                                {% include "common/form/input_textarea.html" with form_input=form.foyer_variante_2_travaux strike_unchecked=True object_field="convention__foyer_variante_2_travaux__"|add:form.uuid.value %}
-                                {% include "common/form/input_checkbox.html" with form_input=form.foyer_variante_3 strike_unchecked=True object_field="convention__foyer_variante_3__"|add:form.uuid.value %}
+                                {% include "common/form/input_checkbox.html" with form_input=form.foyer_residence_variante_1 strike_unchecked=True object_field="convention__foyer_residence_variante_1__"|add:form.uuid.value %}
+                                {% include "common/form/input_checkbox.html" with form_input=form.foyer_residence_variante_2 strike_unchecked=True object_field="convention__foyer_residence_variante_2__"|add:form.uuid.value %}
+                                {% include "common/form/input_textarea.html" with form_input=form.foyer_residence_variante_2_travaux strike_unchecked=True object_field="convention__foyer_residence_variante_2_travaux__"|add:form.uuid.value %}
+                                {% include "common/form/input_checkbox.html" with form_input=form.foyer_residence_variante_3 strike_unchecked=True object_field="convention__foyer_residence_variante_3__"|add:form.uuid.value %}
                             </div>
                         </div>
                     </div>
@@ -48,8 +48,8 @@
     </div>
     <script type="text/javascript" nonce="{{request.csp_nonce}}">
         document.addEventListener('DOMContentLoaded', function(){
-            if (!document.getElementById('foyer_variante_2').checked) {
-                document.getElementById('id_foyer_variante_2_travaux_group').hidden = true
+            if (!document.getElementById('foyer_residence_variante_2').checked) {
+                document.getElementById('id_foyer_residence_variante_2_travaux_group').hidden = true
             }
         })
         function strike_checked_option(e, div_to_toggle_id) {
@@ -66,8 +66,8 @@
                 }
             }
         }
-        document.getElementById('foyer_variante_1').addEventListener('change', e => strike_checked_option(e, undefined));
-        document.getElementById('foyer_variante_2').addEventListener('change', e => strike_checked_option(e, 'id_foyer_variante_2_travaux_group'));
-        document.getElementById('foyer_variante_3').addEventListener('change', e => strike_checked_option(e, undefined));
+        document.getElementById('foyer_residence_variante_1').addEventListener('change', e => strike_checked_option(e, undefined));
+        document.getElementById('foyer_residence_variante_2').addEventListener('change', e => strike_checked_option(e, 'id_foyer_residence_variante_2_travaux_group'));
+        document.getElementById('foyer_residence_variante_3').addEventListener('change', e => strike_checked_option(e, undefined));
     </script>
 {% endblock %}
