update: init final form for instructeur before validation of avenant

--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -2,7 +2,7 @@
 
 {% if convention|display_delete_convention %}
     <div class="fr-col-12 block--row-strech fr-my-5w">
-        <div class="block--row-strech-1 fr-mt-2w">
+        <div class="block--row-strech-1 fr-mt-2w fr-mr-5w">
             <p class="fr-alert__title">
                 Supprimer ce projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
             </p>
