--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -177,17 +177,22 @@
                                             <td>{{convention.programme.administration}}</td>
                                         {% endif %}
                                         <td>
-                                            <div>
-                                                <strong>
-                                                    <span class="apilos-long-name">{{convention.programme.nom}}</span>
-                                                    <span class="apilos-long-name">{{convention.numero}}</span>
+                                            <div class="apilos--flex-row-left-center">
+                                                <strong>{{convention.programme.nom}}
                                                 </strong>
                                                 {% if convention.is_avenant %}
                                                     <span class="text-title-blue-france fr-p-1w fr-ml-1w apilos-tag-avenant background-white">Avenant</span>
                                                 {%endif%}
                                             </div>
-                                            {% if convention.programme.numero_galion %}
+                                            {% if active and convention.programme.numero_galion %}
                                                 <em data-test-role="programme-galion-cell">{{convention.programme.numero_galion}}</em>
+                                            {% endif %}
+                                            {% if not active and convention.numero %}
+                                                {% if convention.is_avenant %}
+                                                    <em data-test-role="programme-galion-cell">{{convention.parent.numero}} - Anenant n°{{convention.numero}}</em>
+                                                {% else %}
+                                                    <em data-test-role="programme-galion-cell">{{convention.numero}}</em>
+                                                {% endif %}
                                             {% endif %}
                                         </td>
                                         <td data-test-role="programme-financement-cell">{{convention.financement}}</td>
