fix type anenant

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -189,7 +189,7 @@
                                             {% endif %}
                                             {% if not active and convention.numero %}
                                                 {% if convention.is_avenant %}
-                                                    <em data-test-role="programme-galion-cell">{{convention.parent.numero}} - Anenant n°{{convention.numero}}</em>
+                                                    <em data-test-role="programme-galion-cell">{{convention.parent.numero}} - Avenant n°{{convention.numero}}</em>
                                                 {% else %}
                                                     <em data-test-role="programme-galion-cell">{{convention.numero}}</em>
                                                 {% endif %}
